Adds in hot loading for express development server

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <noscript>
       You must enable JavaScript to run this application
     </noscript>
-    <div id="root"></div>
+    <div id="root">
+      Hello World
+    </div>
     <script src="/js/index.bundle.js"></script>
 </html>
