--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,5 @@
     <div id="root">
       Hello World
     </div>
-    <script src="/js/index.bundle.js"></script>
+    <script src="/js/main.bundle.js"></script>
 </html>
