--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <noscript>
-      You must enable JavaScript to run this application
-    </noscript>
-    <div id="root">
-      Hello World
-    </div>
+    <noscript>Enable JavaScript to run this application</noscript>
+    <div id="root">Hello World</div>
     <script src="/js/main.bundle.js"></script>
 </html>
